@@ -30,6 +30,12 @@ next version - not yet released
 * : New icons for the Windows 7 Taskbar
 * : Updated Polish, Japanese, Chinese Simplified, Chinese Traditional, Russian, Ukrainian,
     German, Slovak, French and Armenian translations
+* : Ticket #1652, UI improvements:
+     - "Tearing Test" and "Display stats" menu entries are now disabled
+       if no video is loaded (which means in audio only mode too)
+     - "Organize Favorites" menu entry is disabled if no favorite exists
+     - the filename is not highlighted anymore when opening the properties dialog
+     - double-clicking on the file location will now open the containing folder and select the file.
 ! : Long opening of MKV files after using the "mkvclean" utility
 ! : Incorrect detection of interlaced flag on some MPEG2 stream with DXVA decoder,
     fix choppy playback with incorrect frame rate
